# faster-qwen3-tts-streaming

./: .gitignore  LICENSE  README.md  pyproject.toml
demo/: README.md  server.py
demo/static/: index.html
faster_qwen3_tts_streaming/: __init__.py  decode_loop.py  session.py  smart_session.py  timeline.py
